# audio-max-water

./: .env.example  .gitignore  BACKLOG.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  README.md  STORY.md  cast.json  cast_gatsby.json  cast_salt_and_rust.json  config.yaml  pyproject.toml
AudioMaxWater.app/Contents/: Info.plist
AudioMaxWater.app/Contents/MacOS/: launch
build_gatsby/: script.json
build_gatsby/ch01/: concat.txt
build_hunsford/: script.json
build_hunsford/ch01/: concat.txt
build_salt_and_rust/: config.yaml  script.json
examples/: README.md  gatsby_west_egg_sample.m4b  pp_hunsford_sample.m4b  pp_reconciliation_sample.m4b
llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mcp_sampling_provider.py
pipeline/: _cache.py  _chorus.py  _env.py  _errors.py  _events.py  _ffmpeg.py  _hardware.py  _logging.py  _memory.py  _qa_worker.py  _short_line_splitter.py  _tags.py  audition.py  bench.py  cast.py  config.py  epub3.py  mcp_server.py  normalize.py  package.py  parse.py  qa.py  render.py  retag.py  run.py  schema.py  serve.py  validate.py
pipeline/ingest/: __init__.py  base.py  docx_ingestor.py  epub_ingestor.py  markdown_ingestor.py  pdf_ingestor.py  text_ingestor.py
prompts/: parse_story.md
stories/: gatsby_west_egg_reunion.md  pp_final_reconciliation.md  pp_hunsford_proposal.md  salt-and-rust.md
tts/: __init__.py  backend.py  chatterbox_backend.py  kokoro_backend.py  mlx_kokoro_backend.py
ui/: __init__.py  app.py  mcp_mount.py
ui/services/: audition.py  backend_pool.py  job_store.py  progress.py  session.py  settings.py
ui/static/: app.js  style.css
ui/templates/: _stage_tracker.html  base.html  done.html  history.html  options.html  parsing.html  rendering.html  settings.html  upload.html  voices.html
voice_samples/: SOURCES.md
